--- a/index.html
+++ b/index.html
@@ -3,104 +3,153 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Bedsheets on Flipkart</title>
+    <title>Flipkart Bedding Set</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #f8f8f8;
         }
         header {
-            background-color: #FF5722;
-            color: white;
+            background-color: #0071c2;
+            padding: 10px 0;
             text-align: center;
-            padding: 50px 0;
+            color: #ffffff;
         }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
+        header img {
+            width: 150px;
         }
-        .hero img {
-            width: 100%;
-            max-width: 600px;
-            margin: 20px auto;
-            display: block;
-        }
-        .products {
+        .banner {
+            background: url('https://via.placeholder.com/1600x600') no-repeat center center/cover;
+            height: 400px;
+            text-align: center;
+            color: white;
             display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        .banner h1 {
+            font-size: 50px;
+            margin-bottom: 10px;
+        }
+        .banner p {
+            font-size: 20px;
+        }
+        .product-container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
             padding: 20px;
         }
         .product {
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 10px;
-            width: 250px;
+            background: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 15px;
             text-align: center;
-            border-radius: 8px;
-            overflow: hidden;
         }
         .product img {
             width: 100%;
-            height: 200px;
+            max-height: 250px;
             object-fit: cover;
+            margin-bottom: 15px;
         }
         .product h3 {
+            font-size: 20px;
+            color: #333;
+        }
+        .product p {
+            color: #666;
+            font-size: 16px;
             margin: 10px 0;
         }
-        .cta-button {
-            display: block;
-            background-color: #FF5722;
-            color: white;
-            padding: 15px;
-            text-align: center;
-            text-decoration: none;
-            font-size: 1.2rem;
-            margin: 20px auto;
-            border-radius: 5px;
-            width: 200px;
+        .product button {
+            background-color: #ff5722;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
-        .cta-button:hover {
+        .product button:hover {
             background-color: #e64a19;
         }
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #222;
+            color: #fff;
             text-align: center;
-            padding: 20px;
+            padding: 10px;
+        }
+        footer a {
+            color: #ff5722;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Best Bedsheets Collection on Flipkart</h1>
-        <p>Shop now and get the best deals on premium quality bedsheets</p>
+        <img src="https://via.placeholder.com/150x50?text=Flipkart" alt="Flipkart Logo">
+        <h1>Welcome to Our Premium Bedding Collection</h1>
     </header>
-    <div class="hero">
-        <img src="your-image-link.jpg" alt="Featured Bedsheets">
+
+    <div class="banner">
+        <h1>Exclusive Bedding Sets at Best Prices</h1>
+        <p>Shop Now for High-Quality Bedding Sets Only on Flipkart!</p>
     </div>
-    <div class="products">
+
+    <div class="product-container">
+        <!-- Product 1 -->
         <div class="product">
-            <img src="product-image-link1.jpg" alt="Bedsheet 1">
-            <h3>Premium Cotton Bedsheet</h3>
-            <a href="YOUR-AFFILIATE-LINK-HERE" class="cta-button" target="_blank">Shop Now</a>
+            <img src="https://via.placeholder.com/300x300?text=Bedding+Set+1" alt="Bedding Set 1">
+            <h3>Bedding Set 1</h3>
+            <p>High-quality cotton, comfortable and stylish.</p>
+            <button onclick="window.location.href='https://www.flipkart.com/product-link-1'">Buy Now</button>
         </div>
+
+        <!-- Product 2 -->
         <div class="product">
-            <img src="product-image-link2.jpg" alt="Bedsheet 2">
-            <h3>Luxury Linen Bedsheet</h3>
-            <a href="YOUR-AFFILIATE-LINK-HERE" class="cta-button" target="_blank">Shop Now</a>
+            <img src="https://via.placeholder.com/300x300?text=Bedding+Set+2" alt="Bedding Set 2">
+            <h3>Bedding Set 2</h3>
+            <p>Soft, durable, and elegant design.</p>
+            <button onclick="window.location.href='https://www.flipkart.com/product-link-2'">Buy Now</button>
         </div>
+
+        <!-- Product 3 -->
         <div class="product">
-            <img src="product-image-link3.jpg" alt="Bedsheet 3">
-            <h3>Soft and Cozy Bedsheet</h3>
-            <a href="YOUR-AFFILIATE-LINK-HERE" class="cta-button" target="_blank">Shop Now</a>
+            <img src="https://via.placeholder.com/300x300?text=Bedding+Set+3" alt="Bedding Set 3">
+            <h3>Bedding Set 3</h3>
+            <p>Perfect blend of comfort and luxury.</p>
+            <button onclick="window.location.href='https://www.flipkart.com/product-link-3'">Buy Now</button>
+        </div>
+
+        <!-- Product 4 -->
+        <div class="product">
+            <img src="https://via.placeholder.com/300x300?text=Bedding+Set+4" alt="Bedding Set 4">
+            <h3>Bedding Set 4</h3>
+            <p>Premium quality for a peaceful sleep.</p>
+            <button onclick="window.location.href='https://www.flipkart.com/product-link-4'">Buy Now</button>
+        </div>
+
+        <!-- Product 5 -->
+        <div class="product">
+            <img src="https://via.placeholder.com/300x300?text=Bedding+Set+5" alt="Bedding Set 5">
+            <h3>Bedding Set 5</h3>
+            <p>Affordable luxury that you deserve.</p>
+            <button onclick="window.location.href='https://www.flipkart.com/product-link-5'">Buy Now</button>
+        </div>
+
+        <!-- Product 6 -->
+        <div class="product">
+            <img src="https://via.placeholder.com/300x300?text=Bedding+Set+6" alt="Bedding Set 6">
+            <h3>Bedding Set 6</h3>
+            <p>Soft and cozy, perfect for all seasons.</p>
+            <button onclick="window.location.href='https://www.flipkart.com/product-link-6'">Buy Now</button>
         </div>
     </div>
+
     <footer>
-        <p>&copy; 2025 Best Bedsheets. All Rights Reserved.</p>
+        <p>Shop with confidence at <a href="https://www.flipkart.com" target="_blank">Flipkart</a></p>
     </footer>
 </body>
 </html>
